--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "app",
+  "name": "lingo3d-app",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "lingo3d-react": "latest",
+    "lingo3d-react": "^1.2.51",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0"
+    "typescript": "^4.5.4",
+    "vite": "^2.9.0"
   }
 }
