--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lingo3d-react": "^1.2.51",
+    "lingo3d-react": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
