--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.3",
     "vite": "^2.9.9"
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": false
   }
 }
